--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,17 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --background-color: rgba(255, 255, 255, 1);
+  --font-color: rgba(0, 0, 0, 1);
+}
+
+[data-theme="light"]{
+  --background-color: rgba(255, 255, 255, 1);
+  --font-color: rgba(0, 0, 0, 1);
+}
+
+[data-theme="light"]{
+  --background-color: #18181B;
+    --font-color: rgba(255, 255, 255, 0.92)
 }
