--- a/src/Pages/User/SignIn/signin.module.css
+++ b/src/Pages/User/SignIn/signin.module.css
@@ -37,19 +37,23 @@
 
 .signInArea {
     height: 50%;
-    width: 25%;
+    width: 24%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    border: 1px solid white;
 }
 
 .formArea {
+    width: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
 .inputBoxes {
+    width: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
