--- a/src/Pages/WorkSpace/WorkSpace.module.css
+++ b/src/Pages/WorkSpace/WorkSpace.module.css
@@ -1,247 +1,188 @@
-*{
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans';
+    box-sizing: border-box;
 }
 
-.WorkSpace{
-    width: 100vw;
+.workSpacePage {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
-.dark{
-    background-color: #18181B;
-    color: rgba(255, 255, 255, 1);
-}
-
-.light{
-    background-color: rgba(255, 255, 255, 1);
-    color: rgba(0, 0, 0, 1);
-}
-
-.NavBar{
     width: 100vw;
-    height: 9vh;
-}
-
-.body{
-    width: 100%;
-    height: 100%;
+    background-color: rgba(31, 31, 35, 1);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 3.5% 11% 0% 11%; 
+    overflow: hidden;
 }
 
-.foldersList{
-    width: 100%;
-    display: flex;
-    gap: 2%;
-    flex-wrap: wrap;
+.WorkspaceNavBar {
+    top: 0;
+    width: 100vw;
+    height: 7.75vh;
 }
 
-.folderContainer{
-    height: 5.8vh;
-    min-width: 12.2%;
-    border: none;
-    outline: none;
-    background-color: rgba(255, 255, 255, 0.08);
-    color: rgba(255, 255, 255, 0.92);
-    font-weight: 600;
-    font-size: 0.87rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 5%;
-    padding-inline: 2%;
-    margin-bottom: 1.5%;
-    cursor: pointer;
-    border-radius: 6px;
-}
-
-
-.addFolderButton{
-    width: 17px;
-    aspect-ratio: 1/1;
-    margin-right: 1%;
-}
-
-.deleteIcon{
-    width: 17px;
-    aspect-ratio: 1/1;
-}
-
-.folderContainer span{
-    white-space: nowrap;
-}
-
-
-
-/* .foldersList{
-    width: 100%;
-    padding: 1%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2%;
-    box-sizing: border-box;
-
-    border: 1px solid yellow;
-}
-
-.createFolderButton{
-    height: 6vh;
-    width: 12.2vw;
-}
-
-.createFolderButton button{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.08);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5%;
-    color: rgba(255, 255, 255, 0.92);
-    font-weight: 600;
-    font-size: 0.87rem;
-    border: none;
-}
-
-.createFolderButton button img{
-    width: 10%;
-}
-
-.folderContainer{
-    height: 6vh;
-    min-width: 12.2vw;
-    flex: 1 1 auto;
-    padding: 5%;
-    position: relative;
-    box-sizing: border-box;
-    word-wrap: break-word;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-        border: 1px solid magenta;
-}
-
-.folderContainer button{
-    width: auto;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.08);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgba(255, 255, 255, 0.92);
-    font-weight: 600;
-    font-size: 0.87rem;
-    border: none;
-    color: rgba(255, 255, 255, 0.92);
-    font-weight: 600;
-    font-size: 0.87rem;
-    padding-inline: 5%;
-    margin-inline: 5%;
-    text-overflow: ellipsis;
-    cursor: pointer;
-    
-
-} */
-
-/* .folderContainer button span{
-    padding-inline: 2%;
-} */
-
-
-
-
-
-
-
-.formsList{
-    width: 100%;
+.body {
     flex: 1;
-    margin-top: 2.7%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.itemBox {
+    background-color: rgba(24, 24, 27, 1);
+    width: 23.5%;
+    height: 95%;
+    margin-left: 1%;
+    border: 1px solid rgba(255, 255, 255, 0.16);
+    box-shadow: 0px 20px 25px -5px rgba(0, 0, 0, 0.1) 0px 10px 10px -5px rgba(0, 0, 0, 0.04);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+}
+
+.bubbles,
+.inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-inline: 5%;
+}
+
+.bubbles {
+    margin-top: 15%;
+    height: 22.5%;
+}
+
+.bubbleButtons,
+.inputButtons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    column-gap: 5%;
+    row-gap: 0.5rem;
+    margin-top: 0.25rem;
+}
+
+.heading p {
+    font-family: 'Open Sans';
+    font-size: 0.75rem;
+    font-weight: 600;
+    line-height: 1;
+    color: rgba(255, 255, 255, 0.92);
+    margin-block: 0.5rem;
+}
+
+
+.inputs {
+    height: 40%;
+}
+
+.bubbleButtons button,
+.inputButtons button {
+    background-color: rgba(31, 31, 35, 1);
+    border: 1px solid rgba(39, 39, 42, 1);
+    border-radius: 8px;
+    height: 5.25vh;
+    text-align: left;
+    padding-left: 10%;
+    display: flex;
+    align-items: center;
+    gap: 10%;
+    cursor: pointer;
+    font-family: 'Open Sans';
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1;
+    color: rgba(255, 255, 255, 0.92);
+}
+
+.bubbleButtons button img,
+.inputButtons button img {
+    width: 1rem;
+    aspect-ratio: 1/1;
+}
+
+.formArea {
+    height: 95%;
+    flex: 1;
+    padding: 2% 4% 0 4%;
+    display: flex;
+    justify-content: center;
     overflow-y: auto;
-    display: flex;
-    gap: 2.5%;
-    flex-wrap: wrap;
-    overflow: visible;
 }
 
-.createFormButton{
-    width: 20.4%;
-    height: 38vh;
-    border-radius: 6px;
-}
-
-.FormBox{
-        width: 20.4%;
-        height: 38vh;
-        border-radius: 6px;
-        position: relative;
-        
-    cursor: pointer;
-}
-
-.formNameContainer{
-    width: 100%;
+.formComponents {
+    width: 32%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    gap: 17%;
-    font-weight: 400;
-    font-size: 1rem;
+    font-family: 'Open Sans';
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: left;
     color: rgba(255, 255, 255, 1);
-    position: absolute;
+    gap: 5%;
 }
 
-.createFormButton button{
+.formArea::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+}
+
+.formArea::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.4);
+}
+
+.formArea::-webkit-scrollbar {
+    background: rgba(24, 24, 27, 1);
+    width: 10px;
+}
+
+.formStart {
+    flex-shrink: 0;
+    display: flex;
     width: 100%;
-    height: 100%;
-    background-color: rgba(26, 95, 255, 1);
-    border: none;
-    display: flex;
+    height: 10vh;
     align-items: center;
-    justify-content: center;
+    background-color: rgba(24, 24, 27, 1);
+    border-radius: 16px;
+    padding-inline: 7%;
+}
+
+.formStart img {
+    height: 1rem;
+    aspect-ratio: 1/1;
+    margin-right: 5%;
+}
+
+.formElement{
+    flex-shrink: 0;
+    display: flex;
     flex-direction: column;
-    gap: 17%;
-    font-weight: 400;
-    font-size: 1rem;
-    color: rgba(255, 255, 255, 1);
-    cursor: pointer;
+    width: 100%;
+    height: 15vh;
+    justify-content: center;
+    background-color: rgba(24, 24, 27, 1);
+    border-radius: 16px;
+    padding-inline: 7%;
+    position: relative;
 }
 
-.formNameContainer img{
+.deletePng{
+    width: 1.5rem;
+    height: 1.5rem;
     position: absolute;
-    top: -4%;
-    right: -4%;
+    top: -7%;
+    right: -2.5%;
+    background-color: rgba(68, 68, 68, 1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.createFormButton button img{
-    width: 18%;
-    aspect-ratio: 1;
-}
-
-
-/* .deleteIcon{
-    width: 5%;
+.deletePng img{
+    width: 60%;
     aspect-ratio: 1/1;
-    border: 1px solid maroon;
-}
-
-.deleteIcon img{
-    width: 5%;
-    aspect-ratio: 1/1;
-} */
-
-.selectedFolder{
-    background-color: rgba(255, 255, 255, 1);
 }
