--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,59 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     padding: 0%;
     margin: 0%;
     /* overflow-x: hidden; */
 }
 
-.homePage{
+.homePage {
     width: 100vw;
     height: 100vh;
     background-color: #171923;
+    overflow-y: auto;
+    position: relative;
 }
 
-.navBar{
-    margin-top: 2%;
+.homePage::-webkit-scrollbar{
+    width: 1px;
+}
+
+.navBar {
+    /* margin-top: 2%; */
     width: 100%;
     position: fixed;
     display: flex;
-    display: flex;
     justify-content: space-between;
     align-items: center;
-    height: fit-content;
+    height: 9%;
     z-index: 1000;
+    position: fixed;
+    background-color: #171923;
 }
 
-.logo{
+.logo {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 9.2%;
+    width: 8%;
     height: 100%;
     margin-left: 5%;
 }
 
-.logoImg{
+.logoImg {
+    width: 25%;
+    aspect-ratio: 1/1;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.logoImg img{
+.logoImg img {
     height: 100%;
     aspect-ratio: 1;
 }
 
-.logo h1{
+.logo h1 {
     color: rgba(255, 255, 255, 1);
     font-family: 'Outfit';
     font-weight: 700;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
-.buttons{
+.buttons {
     width: 22%;
     display: flex;
     justify-content: space-between;
@@ -63,10 +72,10 @@
 }
 
 .buttons button {
-    padding: 3% 6%;
+    padding: 1.5% 6%;
 }
 
-.signIn{
+.signIn {
     border: 1.1px solid rgba(126, 166, 255, 1);
     border-radius: 5px;
     background-color: transparent;
@@ -76,7 +85,7 @@
     font-size: 1rem;
 }
 
-.create{
+.create {
     background-color: rgba(26, 95, 255, 1);
     color: rgba(255, 255, 255, 1);
     font-family: 'Open Sans';
@@ -85,25 +94,28 @@
     border-radius: 5px;
     box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.2) inset;
     border: none;
+
 }
 
-.body{
+.body {
     height: 100vh;
     width: 100vw;
     border: 1px yellow solid;
     overflow-y: auto;
+    position: absolute;
 }
 
-.heroPage{
+.heroPage {
     display: flex;
     border: 1px red solid;
     justify-content: center;
     align-items: center;
-    margin-top: 14%;
+    margin-top: 15%;
+    position: relative;
 }
 
 
-.homePageCenterContent{
+.homePageCenterContent {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,13 +124,13 @@
     width: 70vw;
 }
 
-.headingText{
+.headingText {
     width: 100%;
     margin-top: 10%;
     margin-bottom: 3%;
 }
 
-.headingText h1{
+.headingText h1 {
     font-family: 'Outfit';
     background: linear-gradient(90deg, #4B83FF 0%, #B794F4 100%);
     --webkit-background-clip: text;
@@ -128,90 +140,131 @@
     font-size: clamp(16px, 5vw, 72px)
 }
 
-.subHeading{
+.subHeading {
     width: 75%;
 }
 
-.subHeading p{
+.subHeading p {
     font-family: 'Open Sans';
     color: rgba(255, 255, 255, 0.92);
 }
 
-.triangleHomePage{
+.triangleHomePage {
     position: absolute;
     bottom: 22%;
-    left: 3%;
+    left: 0%;
 }
 
-.semiCircleHomePage{
+.semiCircleHomePage {
     position: absolute;
     top: 38%;
     right: 1%;
 }
 
 .triangleHomePage img,
-.semiCircleHomePage img{
+.semiCircleHomePage img {
     width: 16vw;
     height: auto;
     aspect-ratio: 1/1;
 }
 
-/* .heroPage{
+.createFormBotbuttonBar {
+    height: 10%;
+    border: 2px solid navy;
+    margin-top: 1%;
+    margin-bottom: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.createFormBotbuttonBar button {
+    height: 100%;
+    width: 25%;
+    background-color: rgba(26, 95, 255, 1);
+    box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.2) inset;
+    border: none;
+    outline: none;
+    font-family: 'Open Sans';
+    color: rgba(255, 255, 255, 1);
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: 0.1%;
+    border-radius: 6px;
+}
+
+.homeImage {
+    border: 2px solid pink;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeImage img {
+    width: 80%;
+    object-fit: contain;
+}
+
+.footer {
+    border: 2px solid maroon;
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    gap: 10%;
+    margin-top: 15%;
+    padding-inline: 8%;
+}
+
+.column{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.column ul {
+    list-style: none;
+    color: rgba(255, 255, 255, 0.92);
+    font-family: "Open Sans";
+    font-size: 0.85rem;
+    font-weight: 400;
+    line-height: 2;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.column ul li{
+    display: flex;
+}
+
+.footerHeading{
+    width: 100%;
+    margin-bottom: 7.5%;
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-family: 'Open Sans';
+    color: rgba(255, 255, 255, 0.92);
+    display: flex;
+    align-items: center;
+}
+
+.underlined{
+    text-decoration: underline;
+}
+
+.footerLogoImg{
+    width: 1rem;
+    height: 1rem;
+}
+
+.footerLogoImg img{
     width: 100%;
     height: 100%;
-    border: 1px maroon solid;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid saddlebrown;
-
 }
-
-.triangleHomePage{
-    position: relative;
-    top: 11%;
-    right: 3%;
-    flex-shrink: 0;
-    border: 1px solid saddlebrown;
-
-}
-
-.semiCircleHomePage{
-    position: relative;
-    top: 7.5%;
-    right: 1%;
-    flex-shrink: 0;
-    border: 1px solid saddlebrown;
-
-}
-
-.headingText{
-    border: 1px maroon solid;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 14%;
-}
-
-.headingText h1{
-    background: linear-gradient(90deg, #4B83FF 0%, #B794F4 100%);
-    --webkit-background-clip: text;
-    --webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
-
-    font-size: clamp(16px, 5vw, 72px);
-    text-align: center;
-}
-
-.homePageCenterContent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 1px solid saddlebrown;
-    /* width: 20%; */
-    /* flex: 1;
-    box-sizing: border-box;
-} */ 
