--- a/src/Pages/ShareModal/ShareModal.module.css
+++ b/src/Pages/ShareModal/ShareModal.module.css
@@ -19,7 +19,7 @@
 
 .modalContent{
     width: 37.5%;
-    height: 37%;
+    height: 50%;
     background-color: rgba(24, 24, 27, 1);
     border: 1px solid rgba(71, 71, 74, 1);
     box-shadow: 0px 0px 3.8px 0px rgba(255, 255, 255, 0.25);
@@ -31,11 +31,28 @@
     font-family: 'Open Sans';
     border-radius: 24px;
     font-weight: 600;
+    position: relative;
+}
+
+.dropDown{
+    position: absolute;
+    right: 5%;
+    top: 15%;
+}
+
+.emailInvite{
+    border: 1px solid maroon;
+    width: 100%;
+    height: 45%;
+    margin-top: 8%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .heading{
     width: 100%;
-    height: 35%;
     display: flex;
     align-items: center;
 }
@@ -44,4 +61,50 @@
     font-size: 1.5rem;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2%;
+}
+
+.input{
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.input input{
+    flex: 1;
+    width: 100%;
+    background-color: rgba(31, 31, 35, 1);
+    outline: none;
+    border: none;
+}
+.input .error{
+    flex: 0.5;
+    color: maroon;
+}
+
+.cancelButton{
+    width: 1.2rem;
+    height: 1.2rem;
+    position: absolute;
+    top: 4%;
+    right: 2%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+
+.cancel {
+    width: 100%;
+    height: 100%;
+}
+
+.sendButton{
+    width: 100%;
+    height: 22%;
+}
+
+.sendButton button{
+    width: 100%;
+    height: 100%;
 }
