--- a/src/Components/WorkspaceNavBar/WorkspaceNavBar.module.css
+++ b/src/Components/WorkspaceNavBar/WorkspaceNavBar.module.css
@@ -1,12 +1,21 @@
 .WorkspaceNavBar{
     display: flex;
-    background-color: rgba(24, 24, 27, 1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.16);
     width: 100%;
     height: 100%;
     justify-content: space-between;
     align-items: center;
     position: relative;
+}
+
+.WorkspaceNavBar.light{
+    background-color: white;
+    border-bottom: black 1px solid;
+    color: black;
+}
+
+.WorkspaceNavBar.dark{
+    background-color: rgba(24, 24, 27, 1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.16);
 }
 
 .formName{
@@ -19,7 +28,6 @@
 .formName input{
     width: 100%;
     height: 100%;
-    border: none;
     outline: none;
     background-color: rgba(55, 55, 62, 1);
     color: white;
@@ -31,8 +39,19 @@
     border-radius: 4px;
 }
 
+.formNameInput.light{
+    border: black 1px solid;
+    background-color: transparent;
+    color: black;
+}
+
+.formNameInput.dark{
+    border: none;
+}
+
 .formName input::placeholder{
     color: rgba(118, 118, 118, 0.82);
+    border: none;
 }
 
 .rightSide{
@@ -66,6 +85,10 @@
     outline: none;
     cursor: pointer;
     transition: border 0.3s ease-in-out;
+}
+
+.screenButton.light{
+    color: black;
 }
 
 .flow{
@@ -117,7 +140,6 @@
     border: none;
     outline: none;
     height: 100%;
-    color: white;
     border-radius: 4px;
     font-family: 'Open Sans';
     font-size: 0.75rem;
@@ -143,6 +165,16 @@
     background-color: rgba(132, 136, 144, 1);
 }
 
+
 .save{
     background-color: rgba(74, 222, 128, 0.8);
 }
+
+.share.light , .share.light{
+    color: black;
+}
+
+.share.light , .share.light{
+ color: rgba(255, 255, 255, 0.92);
+}
+
