--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -65,7 +65,14 @@
 }
 
 .folderContainer.light{
+    border: 1px solid rgba(24, 24, 27);
+    background-color: transparent;
+    color: black;
+}
+
+.folderContainer.createFolderButton.light{
     background-color: rgba(24, 24, 27);
+    color: white;
 }
 
 
@@ -75,9 +82,17 @@
     margin-right: 1%;
 }
 
+
 .deleteIcon {
     width: 17px;
     aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
+.deleteIcon.light{
+    background-color: white;
+    border: 1px red solid;
+    border-radius: 50%;
 }
 
 .folderContainer span {
@@ -124,11 +139,13 @@
     color: rgba(255, 255, 255, 1);
     position: absolute;
     overflow: visible;
-    /* background-color: red; */
+    border-radius: 16px;
 }
 
 .fileNameContainer.light{
-    background-color: rgba(24, 24, 27);
+    background-color: transparent;
+    border: 1px solid rgba(24, 24, 27);
+    color: black;
 }
 
 .fileNameContainer.dark{
@@ -139,6 +156,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(26, 95, 255, 1);
+    border-radius: 16px;
     border: none;
     display: flex;
     align-items: center;
@@ -153,8 +171,8 @@
 
 .fileNameContainer img {
     position: absolute;
-    top: -4%;
-    right: -4%;
+    top: -2%;
+    right: -2%;
 }
 
 .createFileButton button img {
@@ -167,7 +185,6 @@
 }
 
 .selectedFolder.light{
-    background-color: white;
-    border: 1px solid rgba(24, 24, 27);
-    color: black;
+    background-color: rgba(24, 24, 27);
+    color: white;
 }
