--- a/src/Pages/ShareModal/ShareModal.module.css
+++ b/src/Pages/ShareModal/ShareModal.module.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.ShareModalPage{
+.ShareModalPage {
     position: fixed;
     top: 0;
     left: 0;
@@ -17,7 +17,7 @@
     z-index: 1001;
 }
 
-.modalContent{
+.modalContent {
     width: 37.5%;
     height: 50%;
     background-color: rgba(24, 24, 27, 1);
@@ -25,8 +25,8 @@
     box-shadow: 0px 0px 3.8px 0px rgba(255, 255, 255, 0.25);
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    gap: 2.5%;
     padding: 1% 2% 1.2% 2%;
     font-family: 'Open Sans';
     border-radius: 24px;
@@ -34,16 +34,15 @@
     position: relative;
 }
 
-.dropDown{
+.dropDown {
     position: absolute;
     right: 5%;
     top: 15%;
 }
 
-.emailInvite{
-    border: 1px solid maroon;
+.emailInvite {
     width: 100%;
-    height: 45%;
+    height: 48%;
     margin-top: 8%;
     display: flex;
     flex-direction: column;
@@ -51,38 +50,60 @@
     align-items: center;
 }
 
-.heading{
+.linkInvite {
+    width: 100%;
+    height: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3%;
+}
+
+.heading {
     width: 100%;
     display: flex;
     align-items: center;
 }
 
-.heading h1{
-    font-size: 1.5rem;
+.heading h1 {
+    font-size: 1.25rem;
     color: rgba(255, 255, 255, 1);
     margin-bottom: 2%;
 }
 
-.input{
+.input {
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.input input{
+.input input {
     flex: 1;
     width: 100%;
     background-color: rgba(31, 31, 35, 1);
     outline: none;
     border: none;
-}
-.input .error{
-    flex: 0.5;
-    color: maroon;
+    padding-left: 5%;
+    border-radius: 8px;
+    font-family: 'Open Sans';
+    font-size: 0.75rem;
+    letter-spacing: 0.03rem;
+    font-weight: 600;
+    color: white;
 }
 
-.cancelButton{
+.input input::placeholder {
+    color: rgba(161, 161, 161, 0.31);
+}
+
+.input .error {
+    flex: 0.5;
+    color: maroon;
+    font-size: 0.75rem;
+}
+
+.cancelButton {
     width: 1.2rem;
     height: 1.2rem;
     position: absolute;
@@ -99,12 +120,68 @@
     height: 100%;
 }
 
-.sendButton{
+.sendButton {
     width: 100%;
-    height: 22%;
+    height: 25%;
 }
 
-.sendButton button{
+.sendButton button {
     width: 100%;
     height: 100%;
+    background-color: rgba(26, 95, 255, 1);
+    box-shadow: 0px 4px 10px 0px rgba(233, 68, 75, 0.25);
 }
+
+.copyButton {
+    width: 100%;
+    height: 25%;
+}
+
+.copyButton button {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(26, 95, 255, 1);
+    box-shadow: 0px 4px 10px 0px rgba(233, 68, 75, 0.25);
+}
+
+.sendButton button {
+    font-family: 'Poppins';
+    font-size: 0.75rem;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    border: none;
+    outline: none;
+    border-radius: 8px;
+}
+
+.copyButton button {
+    font-family: 'Poppins';
+    font-size: 0.75rem;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    border: none;
+    outline: none;
+    border-radius: 8px;
+}
+
+.dropDown select {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-family: 'Open Sans';
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+}
+
+.dropDown select option{
+    background-color: rgba(31, 31, 35, 1);
+    box-shadow: 0px 1px 3.5px 0px rgba(255, 255, 255, 0.25);
+}
+
+
+/* setIsLoading(true) */
