--- a/src/Pages/User/SignIn/signin.module.css
+++ b/src/Pages/User/SignIn/signin.module.css
@@ -41,8 +41,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    border: 1px solid white;
 }
 
 .formArea {
@@ -162,6 +160,10 @@ input:-webkit-autofill:active {
     letter-spacing: 3%;
     font-family: 'Poppins';
     padding: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .buttons .or {
@@ -192,4 +194,17 @@ input:-webkit-autofill:active {
 
 .activeLink {
     text-decoration: underline;
+}
+
+.googleIcon{
+    width: 1.25rem;
+    aspect-ratio: 1/1;
+    margin-right: 0.5rem;
+}
+
+.backArrow{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    cursor: pointer;
 }
