--- a/src/Pages/User/SignUp/signup.module.css
+++ b/src/Pages/User/SignUp/signup.module.css
@@ -158,6 +158,7 @@ input:-webkit-autofill:active {
     font-family: 'Poppins';
     padding: 3%;
     margin-bottom: 2%;
+    cursor: pointer;
 }
 
 .buttons .or {
@@ -188,4 +189,17 @@ input:-webkit-autofill:active {
 
 .activeLink {
     text-decoration: underline;
+}
+
+.googleIcon{
+    width: 1.25rem;
+    aspect-ratio: 1/1;
+    margin-right: 0.5rem;
+}
+
+.backArrow{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    cursor: pointer;
 }
